--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "debounce": "^2.1.0",
@@ -22,6 +23,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "14.2.7",
+    "next-cloudinary": "^6.11.0",
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
